[tool.poetry]
name = "ango-user"
version = "0.1.0"
description = "Ango user microservice"
authors = ["Saketh Raman KS"]
readme = "README.md"
packages = [{include = "ango_user"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = {extras = ["email"], version = "^1.10.4"}
alembic = "^1.9.2"
sqlalchemy = "^2.0.1"
python-dotenv = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
poetry = "^1.3.2"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']


[tool.isort]
py_version = 310
profile = "black"
line_length = 120
color_output = true
skip_gitignore = true
multi_line_output = 3
remove_redundant_aliases = true
include_trailing_comma = true